[tool.poetry]
name = "link_api_demo"
version = "0.1.0"
description = ""
authors = ["dmitrii-sorokin-cndt <dmitrii.sorokin@cndt.app>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"
requests = "^2.27.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core==1.2.*"]
build-backend = "poetry.core.masonry.api"
